prusti-tests/tests/verify/ui/false.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/false.rs:9:11
   |
9  | #[ensures(false)]
   |           ^^^^^
   |
note: the error originates here
  --> $DIR/false.rs:10:1
   |
10 | fn test1() {}
   | ^^^^^^^^^^^^^

error: [Prusti: verification error] the asserted expression might not hold
  --> $DIR/false.rs:13:5
   |
13 |     assert!(false);
   |     ^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

